--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <nav>
+    <nav class="main-bar">
         <div class="logo">
             CodingNepal
         </div>
@@ -43,6 +43,21 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
+    <input type="checkbox" id="check">
+    <label for="check">
+        <i class="fas fa-bars" id="btn"></i>
+        <i class="fas fa-times" id="cancel"></i>
+    </label>
+    <div class="sidebar">
+        <header>My Menu</header>
+        <a href="#" class="active"><i class="fas fa-qrcode"></i><span>Dashboard</span></a>
+        <a href="#"><i class="fas fa-link"></i><span>Shortcuts</span></a>
+        <a href="#"><i class="fas fa-stream"></i><span>Overview</span></a>
+        <a href="#"><i class="fas fa-calendar"></i><span>Events</span></a>
+        <a href="#"><i class="fas fa-question-circle"></i><span>About</span></a>
+        <a href="#"><i class="fas fa-sliders-h"></i><span>Services</span></a>
+        <a href="#"><i class="fas fa-envelope"></i><span>Contact</span></a>
+    </div>
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
 </body>
 
